Prevent horizontal overflow on the body

--- a/packages/kununu-theme-v3/scss/base.scss
+++ b/packages/kununu-theme-v3/scss/base.scss
@@ -4,6 +4,7 @@
 body {
   margin: 0;
   background-color: $ice;
+  overflow-x: hidden;
 }
 
 /* 1. Correct the line height in all browsers. */
